--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -7,6 +7,8 @@ FROM mcr.microsoft.com/vscode/devcontainers/python:0-${VARIANT}
 # upgrade setup tools
 RUN pip install setuptools --upgrade
 
+RUN mkdir /cookie_cutter/
+
 # [Optional] If your pip requirements rarely change, uncomment this section to add them to the image.
 # COPY requirements.txt /tmp/pip-tmp/
 # RUN pip3 --disable-pip-version-check --no-cache-dir install -r /tmp/pip-tmp/requirements.txt \
