--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,7 @@
-<<<<<<< HEAD
+..gtex_data/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
-=======
-# File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
-
-# Created by https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,django,python
-# Edit at https://www.toptal.com/developers/gitignore?templates=windows,visualstudiocode,django,python
-
-### Django ###
-*.log
-*.pot
-*.pyc
-__pycache__/
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-media
-
-# If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
-# in your Git repository. Update and uncomment the following line accordingly.
-# <django-project-name>/staticfiles/
-
-### Django.Python Stack ###
-# Byte-compiled / optimized / DLL files
->>>>>>> f4fe133d92891d2594b70ae1fc36aa72185bf6c8
 *.py[cod]
 *$py.class
 
@@ -44,28 +22,16 @@ parts/
 sdist/
 var/
 wheels/
-<<<<<<< HEAD
-pip-wheel-metadata/
-=======
->>>>>>> f4fe133d92891d2594b70ae1fc36aa72185bf6c8
 share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-<<<<<<< HEAD
-MANIFEST
-=======
 # MANIFEST
->>>>>>> f4fe133d92891d2594b70ae1fc36aa72185bf6c8
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
-<<<<<<< HEAD
-*.manifest
-=======
 # *.manifest
->>>>>>> f4fe133d92891d2594b70ae1fc36aa72185bf6c8
 *.spec
 
 # Installer logs
@@ -85,25 +51,12 @@ coverage.xml
 *.py,cover
 .hypothesis/
 .pytest_cache/
-<<<<<<< HEAD
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-=======
 cover/
 
 # Translations
 *.mo
 
 # Django stuff:
->>>>>>> f4fe133d92891d2594b70ae1fc36aa72185bf6c8
 
 # Flask stuff:
 instance/
@@ -116,10 +69,7 @@ instance/
 docs/_build/
 
 # PyBuilder
-<<<<<<< HEAD
-=======
 .pybuilder/
->>>>>>> f4fe133d92891d2594b70ae1fc36aa72185bf6c8
 target/
 
 # Jupyter Notebook
@@ -130,13 +80,9 @@ profile_default/
 ipython_config.py
 
 # pyenv
-<<<<<<< HEAD
-.python-version
-=======
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
 # .python-version
->>>>>>> f4fe133d92891d2594b70ae1fc36aa72185bf6c8
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -145,9 +91,6 @@ ipython_config.py
 #   install all needed dependencies.
 #Pipfile.lock
 
-<<<<<<< HEAD
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-=======
 # poetry
 #   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
 #   This is especially recommended for binary packages to ensure reproducibility, and is more
@@ -164,7 +107,6 @@ ipython_config.py
 .pdm.toml
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
->>>>>>> f4fe133d92891d2594b70ae1fc36aa72185bf6c8
 __pypackages__/
 
 # Celery stuff
