--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -37,12 +37,11 @@
 
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
-		// spell checker
 		"streetsidesoftware.code-spell-checker",
-		// microsoft's extensions for python development
 		"ms-python.python",
 		"ms-python.vscode-pylance",
-		"patrick91.python-dependencies-vscode"
+		"patrick91.python-dependencies-vscode",
+		"tht13.rst-vscode"
 	],
  
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
