--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,115 @@
 {
     "cSpell.words": [
+        "AADACL",
+        "ACAP",
+        "accumbens",
+        "ACOT",
+        "ACTRT",
+        "AGRN",
+        "AGTRAP",
+        "AJAP",
+        "ANGPTL",
+        "ANKRD",
+        "ARHGEF",
+        "ATAD",
+        "AURKAIP",
         "autopep",
         "biolink",
+        "CALML",
+        "CAMTA",
+        "CASZ",
+        "CCDC",
+        "CCNL",
+        "CFAP",
+        "cingulate",
+        "CLCN",
+        "CLSTN",
         "cookiecutter",
+        "CORT",
+        "CPSF",
+        "CPTP",
+        "DFFA",
+        "DFFB",
+        "DHRS",
+        "DNAJC",
+        "DRAXIN",
+        "ectocervix",
+        "endocervix",
         "ENSEMBL",
+        "ENSG",
+        "ERRFI",
+        "EXOSC",
+        "FBXO",
+        "GABRD",
+        "GALT",
+        "gastroesophageal",
         "HGNC",
+        "HNRNPCL",
+        "ICMT",
+        "infores",
         "ISCL",
         "jupyterlab",
+        "KCNAB",
+        "KIAA",
+        "KLHL",
+        "LRRC",
+        "LZIC",
         "markdownlint",
+        "MASP",
+        "MEGF",
+        "metakg",
+        "MIIP",
+        "MMEL",
+        "MRPL",
+        "MTHFR",
+        "MTOR",
+        "muscularis",
+        "MXRA",
         "mypy",
+        "NADK",
+        "NCATS",
         "NCBI",
+        "nigra",
+        "NMNAT",
+        "noqa",
+        "NPHP",
+        "NPPA",
+        "NPPB",
+        "PANK",
+        "PLCH",
+        "PLEKHG",
+        "PLEKHN",
+        "PRAMEF",
+        "PRDM",
+        "PRKCZ",
+        "PTCHD",
+        "PUSL",
         "pycodestyle",
         "pydocstyle",
         "pylama",
         "pylance",
         "pylint",
+        "qedge",
+        "qnode",
+        "RERE",
+        "SAMD",
+        "SCNN",
+        "SPSB",
+        "substantia",
+        "suprapubic",
+        "TARDBP",
+        "tcga",
+        "THAP",
+        "TMEM",
+        "TNFRSF",
+        "TPRG",
         "trapi",
+        "TTLL",
         "UBERON",
-        "yapf"
-    ]
+        "UBIAD",
+        "yapf",
+        "ZBTB"
+    ],
+    "workbench.startupEditor": "readme",
+    "python.languageServer": "Pylance",
 }
