--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,6 @@
-bump2version
+pytest
 pylama
+django_extensions
 django
-wheel
-git+https://github.com/di2ag/trapi_model.git
-git+https://github.com/di2ag/chp_utils.git
 django-stubs
+djangorestframework
