--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
+fixtures/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-
+gene_specificity_data/
 # C extensions
 *.so
 
@@ -24,6 +25,7 @@ share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+*.egg-info/
 # MANIFEST
 
 # PyInstaller
