updating for testing

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
-chp_db_fixture.json.gz
-=======
-fixtures/
->>>>>>> 92ca8779c719cb4d288fcb3cc377ddc02c407b0a
+db.sqlite3
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
