--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -46,7 +46,9 @@
 	],
  
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+	"forwardPorts": [
+		8000 // django default port
+	],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"onCreateCommand": "pip install -r /workspace/requirements.txt && pip install -r /workspace/requirements-dev.txt && pip install -e .",
