--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.234.0/containers/python-3
 {
-	"name": "Python 3",
+	"name": "gene specificity app",
 	"build": {
 		"dockerfile": "Dockerfile",
 		"context": "..",
@@ -33,7 +33,8 @@
 		"python.linting.pycodestylePath": "/usr/local/py-utils/bin/pycodestyle",
 		"python.linting.pydocstylePath": "/usr/local/py-utils/bin/pydocstyle",
 		"python.linting.pylintPath": "/usr/local/py-utils/bin/pylint",
-		"workbench.startupEditor": "readme"
+		"workbench.startupEditor": "readme",
+		"workbench.editor.enablePreview": false
 	},
 	
 	// Add the IDs of extensions you want installed when the container is created.
@@ -54,7 +55,7 @@
 	"onCreateCommand": "bash .devcontainer/onCreateCommand.sh",
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	// "remoteUser": "vscode",
+	"remoteUser": "vscode",
 	"features": {
 		"docker-in-docker": "latest",
 		"git": "latest",
