--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -42,7 +42,8 @@
 		"ms-python.python",
 		"ms-python.vscode-pylance",
 		"patrick91.python-dependencies-vscode",
-		"tht13.rst-vscode"
+		"tht13.rst-vscode",
+		"GitHub.vscode-pull-request-github"
 	],
  
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
@@ -51,7 +52,7 @@
 	],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"onCreateCommand": "pip install -r /workspace/requirements.txt && pip install -r /workspace/requirements-dev.txt && pip install -e .",
+	"onCreateCommand": "",
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	// "remoteUser": "vscode",
