--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -113,4 +113,6 @@
     ],
     "workbench.startupEditor": "readme",
     "workbench.editor.enablePreview": false,
+    "python.analysis.typeCheckingMode": "strict",
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/",
 }
