testing curie templating

--- a/gene_specificity/app_meta_data/meta_knowledge_graph.json
+++ b/gene_specificity/app_meta_data/meta_knowledge_graph.json
@@ -2,9 +2,7 @@
   "nodes": {
     "biolink:Gene": {
       "id_prefixes": [
-        "ENSEMBL",
-        "NCBIGene",
-        "HGNC"
+        "ENSEMBL"
       ]
     },
     "biolink:GrossAnatomicalStructure": {
